--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Webscraping and visualisation app",
   "main": "app.js",
   "scripts": {
-    "test": "jasmine"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
